# object-shell

./: CMakeLists.txt  README.md  Select.cpp  oshell.py
Commands/: FileList  ProcessList  Show  Where
Schemas/: Date.schema.json  File.schema.json
